samples/_failures_safe/1761199378_01b3a4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_74b44188.c: In function ‘main’:
./samples/SAFE/__tmp_74b44188.c:166:16: error: missing terminating " character
  166 |         printf("[%s
      |                ^~~~
./samples/SAFE/__tmp_74b44188.c:166:9: error: expected expression at end of input
  166 |         printf("[%s
      |         ^~~~~~
./samples/SAFE/__tmp_74b44188.c:166:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_74b44188.c:166:9: error: expected declaration or statement at end of input
